Closed
Bug 139297
Opened 24 years ago
Closed 24 years ago
Bidi text reversed in print headers
Categories
(Core :: Layout: Text and Fonts, defect)
Core
Layout: Text and Fonts
Tracking
()
RESOLVED
FIXED
People
(Reporter: smontagu, Assigned: mkaply)
References
()
Details
(Whiteboard: [adt2 RTM] [ETA 05/15])
Attachments
(1 file)
|
6.21 KB,
patch
|
roland.mainz
:
review+
attinasi
:
superreview+
jesup
:
approval+
|
Details | Diff | Splinter Review |
When printing a URL with Bidi text in the page title, the Bidi text in the page
header appears reversed.
Steps to reproduce: go to http://www.google.com/advanced_search?hl=iw or any
page with Hebrew, Arabic etc in the title; Print, or Print Preview.
Expected results: correctly ordered text.
Actual results: All text is the title is rendered left-to-right.
Giving platform/OS as All/All, but note that this doesn't happen on platforms
like Win2000 with native Bidi support.
| Reporter | ||
Comment 1•24 years ago
|
||
| Reporter | ||
Comment 2•24 years ago
|
||
mkaply, can you review the patch?
Comment 3•24 years ago
|
||
Comment on attachment 80495 [details] [diff] [review]
patch v.1
r=Roland.Mainz@informatik.med.uni-giessen.de ; tested the patch with Xprint
module - the headers now print correctly with this patch... :)
Attachment #80495 -
Flags: review+
Comment 4•24 years ago
|
||
Comment on attachment 80495 [details] [diff] [review]
patch v.1
sr=attinasi
Attachment #80495 -
Flags: superreview+
| Reporter | ||
Comment 5•24 years ago
|
||
Fix checked into trunk
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Comment 6•24 years ago
|
||
smontagu:
What about requesting approval for the 1.0-branch ?
Updated•24 years ago
|
Attachment #80495 -
Flags: approval+
Comment 7•24 years ago
|
||
Comment on attachment 80495 [details] [diff] [review]
patch v.1
a=rjesup@wgate.com for branch checkin. Make sure it's on the trunk as well
| Reporter | ||
Comment 8•24 years ago
|
||
Fix is on the trunk:
http://bonsai.mozilla.org/cvslog.cgi?file=mozilla/layout/html/base/src/nsPageFrame.cpp
Keywords: adt1.0.0
Comment 9•24 years ago
|
||
Let's get this one in after RC2. adt1.0.0- [adt2 RTM]
Comment 10•24 years ago
|
||
adding adt1.0.0+. Please get drivers approval again since it's been more than 3
days since the previous approval and afterwards checkin to the 1.0 branch.
Comment 11•24 years ago
|
||
reapproved for the 1.0 branch.
Updated•24 years ago
|
Component: Layout: BiDi Hebrew & Arabic → Layout: Text
QA Contact: zach → layout.fonts-and-text
You need to log in
before you can comment on or make changes to this bug.
Description
•