Perform Bidi reordering on page headers when printing. Bug 139297, r=Roland.Mainz@informatik.med.uni-giessen.de, sr=attinasi